Developed search model for event endpoints
